--- a/templates/auctions/delete_auction.html
+++ b/templates/auctions/delete_auction.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-4"><strong>Starting Price:</strong></div>
-                            <div class="col-sm-8">${{ auction.starting_price }}</div>
+                            <div class="col-sm-8">₹{{ auction.starting_price }}</div>
                         </div>
                         <div class="row">
                             <div class="col-sm-4"><strong>Bids:</strong></div>
