--- a/templates/auctions/delete_bid.html
+++ b/templates/auctions/delete_bid.html
@@ -34,7 +34,7 @@
                         <h6><i class="fas fa-info-circle"></i> Bid Details:</h6>
                         <div class="row">
                             <div class="col-sm-4"><strong>Amount:</strong></div>
-                            <div class="col-sm-8">${{ bid.amount }}</div>
+                            <div class="col-sm-8">₹{{ bid.amount }}</div>
                         </div>
                         <div class="row">
                             <div class="col-sm-4"><strong>Placed:</strong></div>
